--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -359,6 +359,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video-card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -1911,7 +1912,7 @@ Multimedia API</a>. </big>
         3.4.8 – 3.4.9 – Sprite subsystem improved.<br>
         3.5 – 3.5.4 – Small changes.<br>
         3.5.5 – Tile-set subsystem improved.<br>
-        3.5.6 – Small changes.<br>
+        3.5.6 – 3.6 – Small changes.<br>
       </big></span>
   </body>
 </html>
