--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1447,6 +1447,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         bellow.</big></p>
     <big> </big>
     <table style="text-align: left; width: 365px; height: 94px;" cellspacing="2"
+
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1915,6 +1916,7 @@ Multimedia API</a>. </big>
         3.5.5 – Tile-set subsystem improved.<br>
         3.5.6 – 3.6.4 – Small changes.<br>
         3.6.5 – Multimedia subsystem improved.<br>
+        3.6.6 – 3.6.7 – Small changes.<br>
       </big></span>
   </body>
 </html>
