--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1921,7 +1921,7 @@ Multimedia API</a>. </big>
         3.7.1 – Small changes.<br>
         3.7.2 – Binary file subsystem improved.<br>
         3.7.3 – Background subsystem improved.<br>
-        3.7.4 – Small changes.<br>
+        3.7.4 – 3.7.5 – Small changes.<br>
       </big></span>
   </body>
 </html>
