Small bug fixed

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1922,6 +1922,7 @@ Multimedia API</a>. </big>
         3.7.2 – Binary file subsystem improved.<br>
         3.7.3 – Background subsystem improved.<br>
         3.7.4 – 3.7.5 – Small changes.<br>
+        3.7.6 – Small bug fixed.<br>
       </big></span>
   </body>
 </html>
