--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -390,6 +390,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         unsigned int width,</span></big><big><span style="font-style: italic;">const
         unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
       – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
+
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -1923,7 +1924,7 @@ Multimedia API</a>. </big>
         3.7.3 – Background subsystem improved.<br>
         3.7.4 – 3.7.5 – Small changes.<br>
         3.7.6 – Small bug fixed.<br>
-        3.7.7 – Small changes.<br>
+        3.7.7 – 3.8.3 – Small changes.<br>
       </big></span>
   </body>
 </html>
