Just a bugfix release

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -390,7 +390,6 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         unsigned int width,</span></big><big><span style="font-style: italic;">const
         unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
       – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
-
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -400,7 +399,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       terminated. This method don’t use fps limit and need high processor usage.<br>
       <span style="font-style: italic;">bool Screen::is_ready() const;</span>&nbsp;
       – Return true if the subsystem is already initialized.<br>
-      <span style="font-style: italic;">bool Screen::is_accelerated() const;</span>&nbsp;
+      <span style="font-style: italic;">bool Screen::is_accelerated();</span>&nbsp;
       – Return true if render is hardware accelerated.<br>
       <span style="font-style: italic;">unsigned int Screen::get_fps() const;</span>
       – Return current fps value.<br>
@@ -1924,7 +1923,9 @@ Multimedia API</a>. </big>
         3.7.3 – Background subsystem improved.<br>
         3.7.4 – 3.7.5 – Small changes.<br>
         3.7.6 – Small bug fixed.<br>
-        3.7.7 – 3.8.4 – Small changes.<br>
+        3.7.7 – 3.8.5 – Small changes.<br>
+        3.8.6 – Game-pad subsystem improved.<br>
+        3.8.7 – 3.8.8 – Small changes.<br>
       </big></span>
   </body>
 </html>
