Image resizing improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1926,6 +1926,8 @@ Multimedia API</a>. </big>
         3.7.7 – 3.8.5 – Small changes.<br>
         3.8.6 – Game-pad subsystem improved.<br>
         3.8.7 – 3.8.8 – Small changes.<br>
+        3.8.9 – Image resizing improved.<br>
+        3.9 – 3.9.1 – Small changes.<br>
       </big></span>
   </body>
 </html>
