Keyboard input improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1927,7 +1927,8 @@ Multimedia API</a>. </big>
         3.8.6 – Game-pad subsystem improved.<br>
         3.8.7 – 3.8.8 – Small changes.<br>
         3.8.9 – Image resizing improved.<br>
-        3.9 – 3.9.1 – Small changes.<br>
+        3.9 – 3.9.7 – Small changes.<br>
+        3.9.8 – Keyboard input improved.<br>
       </big></span>
   </body>
 </html>
