--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1928,7 +1928,7 @@ Multimedia API</a>. </big>
         3.8.7 – 3.8.8 – Small changes.<br>
         3.8.9 – Image resizing improved.<br>
         3.9 – 3.9.7 – Small changes.<br>
-        3.9.8 – Keyboard input improved.<br>
+        3.9.8 – 3.9.9 – Keyboard input improved.<br>
       </big></span>
   </body>
 </html>
