--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1929,6 +1929,7 @@ Multimedia API</a>. </big>
         3.8.9 – Image resizing improved.<br>
         3.9 – 3.9.7 – Small changes.<br>
         3.9.8 – 3.9.9 – Keyboard input improved.<br>
+        4.0 – Small changes.<br>
       </big></span>
   </body>
 </html>
