--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -947,25 +947,13 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <br>
       <span style="font-style: italic;">void Collision::set_target(const
         EUGENEGDK::BOX &amp;first_target,const EUGENEGDK::BOX
-        &amp;second_target);</span> – Set targets for collision detector.<br>
-      <span style="font-style: italic;">bool
-        Collision::check_horizontal_collision() const;</span> – Return true if
-      horizontal collision between two object is accepted.<br>
-      <span style="font-style: italic;">bool
-        Collision::check_vertical_collision() const;</span> – Return true if
-      vertical collision between two objects is accepted.</big><br>
+        &amp;second_target);</span> – Set targets for collision detector.<span style="font-style: italic;"></span></big><br>
     <big> <span style="font-style: italic;">bool Collision::check_collision()
-        const;</span> – Return true if horizontal or vertical collision between
-      two objects is accepted.</big><br>
-    <big><i>bool Collision::check_horizontal_collision(const EUGENEGDK::BOX
-        &amp;first_target,const EUGENEGDK::BOX &amp;second_target);</i> – Set
-      collision target and check horizontal collision.</big><br>
-    <big><i>bool Collision::check_vertical_collision(const EUGENEGDK::BOX
-        &amp;first_target,const EUGENEGDK::BOX &amp;second_target);</i> – Set
-      collision target and check vertical collision.</big><br>
+        const;</span> – Return true if collision between two objects is
+      accepted.</big><big><i></i></big><br>
     <big><i>bool Collision::check_collision(const EUGENEGDK::BOX
         &amp;first_target,const EUGENEGDK::BOX &amp;second_target);</i> – Set
-      collision target and check collision.</big><br>
+      collision target and check collision between two objects.</big><br>
     <big> <span style="font-style: italic;">EUGENEGDK::BOX
         Collision::generate_box(const unsigned int x,const unsigned int y,const
         unsigned int width,const unsigned int height) const;</span> – Generate
@@ -1929,7 +1917,10 @@ Multimedia API</a>. </big>
         3.8.9 – Image resizing improved.<br>
         3.9 – 3.9.7 – Small changes.<br>
         3.9.8 – 3.9.9 – Keyboard input improved.<br>
-        4.0 – Small changes.<br>
+        4.0 – 4.0.1 – Small changes.<br>
+        4.0.2 – Collision detection subsystem improved.<br>
+        4.0.3 – Small bug in collision detection subsystem fixed.<br>
+        4.0.4 – Collision detection subsystem improved.<br>
       </big></span>
   </body>
 </html>
