--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -359,6 +359,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video-card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -1921,6 +1922,7 @@ Multimedia API</a>. </big>
         4.0.2 – Collision detection subsystem improved.<br>
         4.0.3 – Small bug in collision detection subsystem fixed.<br>
         4.0.4 – Collision detection subsystem improved.<br>
+        4.0.5 – Small changes.<br>
       </big></span>
   </body>
 </html>
