--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1922,7 +1922,7 @@ Multimedia API</a>. </big>
         4.0.2 – Collision detection subsystem improved.<br>
         4.0.3 – Small bug in collision detection subsystem fixed.<br>
         4.0.4 – Collision detection subsystem improved.<br>
-        4.0.5 – Small changes.<br>
+        4.0.5 – 4.0.6 – Small changes.<br>
       </big></span>
   </body>
 </html>
