Image storage improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -359,7 +359,6 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
-
         href="http://opengl.org">OPENGL</a> for render. Most modern video-card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -429,9 +428,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="font-style: italic;">unsigned int *Picture::get_image();</span>
       – Return handle to image storage.<br>
     </big><big><span style="font-style: italic;">void Picture::destroy_image();</span>
-      – Destroy image&nbsp; in the storage.</big><big><br>
-      <span style="font-style: italic;">size_t Picture::get_length() const;</span>
-      – Return length of image buffer in bytes.<br>
+      – Destroy image&nbsp; in the storage.</big><big><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Picture::is_storage_empty() const;</span>
       – Return true if storage is empty.<br>
       <span style="font-style: italic;">unsigned int Picture::get_image_width()
@@ -1937,6 +1934,7 @@ Multimedia API</a>. </big>
         4.2.3 – Image storage improved.<br>
         4.2.4 – Image loader improved.<br>
         4.2.5 – Small changes.<br>
+        4.2.6 – Image storage improved.<br>
       </big></span>
   </body>
 </html>
