Keyboard and mouse input improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -399,7 +399,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       terminated. This method don’t use fps limit and need high processor usage.<br>
       <span style="font-style: italic;">bool Screen::is_ready() const;</span>&nbsp;
       – Return true if the subsystem is already initialized.<br>
-      <span style="font-style: italic;">bool Screen::is_accelerated();</span>&nbsp;
+      <span style="font-style: italic;">bool Screen::is_accelerated() const;</span>&nbsp;
       – Return true if render is hardware accelerated.<br>
       <span style="font-style: italic;">unsigned int Screen::get_fps() const;</span>
       – Return current fps value.<br>
@@ -1935,6 +1935,9 @@ Multimedia API</a>. </big>
         4.2.4 – Image loader improved.<br>
         4.2.5 – Small changes.<br>
         4.2.6 – Image storage improved.<br>
+        4.2.7 – Mouse input improved.<br>
+        4.2.8 – Keyboard input improved.<br>
+        4.2.9 – Small changes.<br>
       </big></span>
   </body>
 </html>
